finished christmas card :)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -13,9 +14,20 @@
 
         <div class="left-card">
 
+            <div class="card-front">
+                <img src="card3.jpg" alt="christmas card cover">
+            </div>
+            <div class="card-back">
+                <!--Optional text goes here-->
+            </div>
         </div>
 
+
         <div class="right-card">
+            <h2>Merry Chrismas</h2>
+            <p>Lots of love and happiness!</p>
+            <p>Great food and quality time with family and friens!</p>
+            <p>Wishes Wojtek</p>
             <!--optional text goes here-->
         </div>
 
